--- a/web/index.html
+++ b/web/index.html
@@ -8,6 +8,9 @@
   <meta name="theme-color" content="#000000">
   <link rel="manifest" href="manifest.json">
   <title>Home</title>
+  <meta http-equiv="Content-Security-Policy" content="default-src *; script-src 'self' 'unsafe-inline' 'unsafe-eval' *;">
+  <meta name="referrer" content="no-referrer-when-downgrade">
+
 </head>
 <body>
   <script src="main.dart.js" type="application/javascript"></script>
